Fix media content overflow

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5920,6 +5920,7 @@ a.dropdown-item.is-active {
           flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
+  overflow: auto;
   text-align: left;
 }
 
